--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
-    "@ionic-native/status-bar": "^4.4.0",
-    "@ionic/storage": "^2.1.3",
+    "@ionic-native/status-bar": "^4.20.0",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.4",
-    "cordova-browser": "5.0.4",
+    "cordova-browser": "^5.0.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -33,7 +33,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
-    "ionic2-super-tabs": "^5.1.1",
+    "ionic2-super-tabs": "^5.2.0",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
