--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/clipboard": "^4.20.0",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "^4.20.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
+    "cordova-clipboard": "^1.3.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -52,7 +54,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-clipboard": {}
     },
     "platforms": [
       "browser",
